--- a/templates/tickets_table.html
+++ b/templates/tickets_table.html
@@ -9,7 +9,7 @@
 		</div>
 		<div id="tickets">
 			{% for ticket in tickets_todo %}
-			<div class="card">
+			<div class="card" id="ticket-{{ticket.id}}">
 				<div class="card-header">{{ ticket.title }}</div>
 				<div class="card-body">
 					<p class="small-text">{{ticket.created_at|fmtdate}}</p>
@@ -19,8 +19,13 @@
 						<option value="doing">doing</option>
 						<option value="done">done</option>
 					</select>
+					{% if ticket.description.len() > 0 %}
 					<p>{{ ticket.description }}</p>
-
+					{% else %}
+					<p hx-get="/tickets/{{ticket.id}}/edit_description" hx-swap="outerHTML">
+						<i>Add description</i>
+					</p>
+					{% endif %}
 
 					<p class="small-text">Created by: {{ticket.creator_name}}</p>
 					<!-- <p class="small-text">ID: {{ticket.id}}</p> -->
@@ -37,7 +42,7 @@
 		</div>
 		<div id="tickets-doing">
 			{% for ticket in tickets_doing %}
-			<div class="card">
+			<div class="card" id="ticket-{{ticket.id}}">
 				<div class="card-header">{{ ticket.title }}</div>
 				<div class="card-body">
 					<p class="small-text">{{ticket.created_at|fmtdate}}</p>
@@ -64,7 +69,7 @@
 		</div>
 		<div id="tickets-done">
 			{% for ticket in tickets_done %}
-			<div class="card">
+			<div class="card" id="ticket-{{ticket.id}}">
 				<div class="card-header"><s>{{ ticket.title }}</s></div>
 				<div class="card-body">
 					<p class="small-text">{{ticket.created_at|fmtdate}}</p>
