--- a/templates/tickets.html
+++ b/templates/tickets.html
@@ -4,7 +4,7 @@
 
 {% block header %}
 <div class="header-left"> 
-<h3><a style="cursor:pointer"hx-target="body" hx-swap="beforeend" hx-get="/profile">{{username}}</a> </h3>
+<h3><a style="cursor:pointer" hx-target="#ticket-container" hx-swap="beforeend" hx-get="/profile">{{username}}</a> </h3>
 </div>
 <div class="header-right">
    <a href="/">Home</a>
