--- a/static/styles.css
+++ b/static/styles.css
@@ -67,6 +67,13 @@ body p {
     font-size: 12pt;
 }
 
+.centered-middle {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-content: center;
+}
+
 h1 {
     margin: 0px;
 }
